feat: add platform version requirement
